Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 6.1.2
-
Fix Version/s: 6.1.3, 6.3.0 Alpha
-
Component/s: Documentation, Quick: Core Declarative QML
-
Labels:None
-
Platform/s:
-
Commits:88f38cbcb27566650109a97098a9cf2c19668fb0 (qt/qtdeclarative/dev) 695df0be88e3684f192c769b51322c1c67820f77 (qt/qtdeclarative/6.1) b9fd87b2771a7a5ade9cb1644b7c8c70fc2a9d6c (qt/qtdeclarative/6.1.3)
Description
All properties on KeyNavigation QML Type should be marked as attached in docs. That's it.