doc: Mark KeyNavigation's properties as attached

Fixes: QTBUG-95811
Pick-to: 6.2 6.1 6.1.3
Change-Id: I3bedef190b839bf5436d0cdd07d2011c237c03f2
Reviewed-by: Paul Wicking <paul.wicking@qt.io>